--- a/2-usuario-activo.html
+++ b/2-usuario-activo.html
@@ -99,34 +99,24 @@
                 height: calc(100% - 80px);
             }
             .image{
+                position: absolute;
+                z-index: 1;
                 margin-top: -60px;
-                width: 100px;
-                height: 110px;
+                width: 140px;
+                height: 128px;
+                right: 10vw;
+                margin-top: -80px;      
             }
             .title{
-                visibility: hidden;
-                height: 0px;
-                font-size: 0px;
-                margin-top: 50px;
-            }
-            .title::before {
-                visibility: visible;
-                color: #131220;
-                font-size: 35px;
-                font-weight: bold;
-                font-family: 'Mersad', sans-serif;
-                text-align: left;
-                overflow-wrap: break-word;
-                margin-top: 80px;
-                content: "¡Hola \ [Nombre de la Organización]!";
-                white-space: pre-line; 
-
+                margin-top: 70px;
+                position: relative;
+                z-index: 40;
             }
             .content{
-                margin-top: 170px;
+                margin-top: 10px;
             }
             .button{
-                display: none;
+                margin-right: auto;
             }
             .footer-title{
                 justify-content: center;
@@ -167,8 +157,8 @@
             }
             .image{
                 margin-top: -60px;
-                width: 188px;
-                height: 210px;
+                width: 310px;
+                height: 285px;
             }
             .title{
                 width: 300px;
@@ -196,13 +186,13 @@
     <div class="container">
         <div class="header">
             <div class="title-head">
-                <img src="./img/flowers.png" class="image"> 
+                <img src="./img/hand.png" class="image"> 
                 <div class="title">¡Bienvenide [Nombre de la Organización]!</div>
             </div>
             <div class="content">
-                <div class="parrafo">Gracias por registrarte en Semillero. Estamos revisando tu solicitud. </br></div>
-                <div class="parrafo">En las próximas <b>48 horas</b> recibirás un correo confirmando tu ingreso a la plataforma.</br></div>
-                <div class="parrafo">Saludos, El equipo de Semillero </br></div>
+                <div class="parrafo">¡Felicitaciones! Tu solicitud para unirte a la plataforma de Semillero fue aprobada. </br></div>
+                <div class="parrafo">Para activar tu cuenta y establecer tu contraseña, hace click en el siguiente enlace.</br></div>
+                <div class="parrafo">¡Gracias por elegir Semillero!</br></div>
             </div>
             <div class="button">Activar tu cuenta</div>
             <div class="separator"></div>
