--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="./image.png" class="image" width="150" height="50"> 
+            <img src="./img/image.png" class="image" width="125" height="30"> 
             <div class="separator"></div>
             <div class="title">¡Hola [Nombre de la Organización]!</div>
 
