--- a/3-usuario-activo.html
+++ b/3-usuario-activo.html
@@ -13,7 +13,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #32D0F3, #7C59F0);
+            background: linear-gradient(to right, #2FCD9A, #7C59F0);
             margin: 0;
             padding: 0;
             display: flex;
@@ -99,15 +99,21 @@
                 height: calc(100% - 80px);
             }
             .image{
-                margin-top: -60px;
-                width: 100px;
-                height: 110px;
+                display:none;
+                visibility: hidden;
+            }
+            .image-purple{
+                position: absolute;
+                z-index: 1;
+                margin-top: -10px;
+                width: 155px;
+                height: 153px;
+                right: 10vw;
             }
             .title{
                 visibility: hidden;
-                height: 0px;
+                height: 100px;
                 font-size: 0px;
-                margin-top: 50px;
             }
             .title::before {
                 visibility: visible;
@@ -118,14 +124,34 @@
                 text-align: left;
                 overflow-wrap: break-word;
                 margin-top: 80px;
-                content: "¡Hola \ [Nombre de la Organización]!";
-                white-space: pre-line;
+                content: "¡Bienvenide \A [Nombre de la Organización]!";
+                white-space: pre-line; 
+                margin-top: 140px;
+                position: relative;
+                top: 125px;
+                z-index: 2;
+
             }
             .content{
-                margin-top: 170px;
+                visibility: hidden;
+                height: 0px;
+            }
+            .content-min-size {
+                visibility: visible;
+                font-family: 'Noto Sans', sans-serif;
+                overflow-wrap: break-word;
+                color: #74788D;
+                font-size: 18px;
+                text-align: left;
+                line-height: 3vh;
+                white-space: pre-line; 
+                position: relative;
+                top: 150px;
+                width: 100%;
             }
             .button{
-                display: none;
+                margin-right: auto;
+                margin-top: 150px;
             }
             .footer-title{
                 justify-content: center;
@@ -166,15 +192,23 @@
             }
             .image{
                 margin-top: -60px;
-                width: 188px;
-                height: 210px;
+                width: 248px;
+                height: 272px;
+            }
+            .image-purple{
+                display: none;
+                visibility: hidden;
             }
             .title{
-                width: 300px;
+                width: 500px;
                 margin-top: 60px;
             }
             .content{
                 margin-top: 2vh;
+            }
+            .content-min-size{
+                visibility: hidden;
+                height: 0px;
             }
             .contact-container {
                 display: flex; 
@@ -195,15 +229,27 @@
     <div class="container">
         <div class="header">
             <div class="title-head">
-                <img src="./img/flowers.png" class="image"> 
-                <div class="title">¡Bienvenide [Nombre de la Organización]!</div>
+                <img src="./img/active.png" class="image"> 
+                <img src="./img/active-purple.png" class="image-purple">
+                <div class="title">¡Bienvenide <br/>[Nombre de Usuarie]!</div>
             </div>
             <div class="content">
-                <div class="parrafo">Gracias por registrarte en Semillero. Estamos revisando tu solicitud. </br></div>
-                <div class="parrafo">En las próximas <b>48 horas</b> recibirás un correo confirmando tu ingreso a la plataforma.</br></div>
-                <div class="parrafo">Saludos, El equipo de Semillero </br></div>
+                <div class="parrafo">Ahora que tu cuenta está activada, podés:</br></div>
+                <div class="parrafo"><ul>
+                    <li>Publicar ofertas laborales.</li>
+                    <li>Buscar candidates.</li>
+                    <li>Guardar tus favoritos para un acceso rápido.</li>
+                </ul></div>
+                <div class="parrafo">Pero antes de empezar, te invitamos a completar tu perfil para que les postulantes puedan conocerte mejor.</br>
+                    ¡Gracias por unirte!
+                </div>
             </div>
-            <div class="button">Activar tu cuenta</div>
+            <div class="content-min-size">
+                <div class="parrafo">¡Felicitaciones! Tu solicitud para unirte a la plataforma de Semillero fue aprobada.</br></div>
+                <div class="parrafo">Para activar tu cuenta y establecer tu contraseña, hace click en el siguiente enlace.</br></div>
+                <div class="parrafo">¡Gracias por elegir Semillero!</div>
+            </div>
+            <div class="button">Ir a mi perfil</div>
             <div class="separator"></div>
             <div class="footer-title">
                 <img src="./img/image.png" class="contact-image" width="100" height="25"> 
